deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: 2048
          image: ghcr.io/onedr0p/2048:latest
          ports:
            - containerPort: 80
