httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: game-2048
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
  hostnames:
    - "2048.kadenzobel.com"   # change this
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: game-2048
          port: 80
